[package]
name = "rust-asunoyozora"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }

[features]
python = ["pyo3"]

[lib]
name = "rust_asunoyozora"
crate-type = ["cdylib"]
