[package]
name = "rust-asunoyozora"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"



[lib]
name = "rust_asunoyozora"
crate-type = ["cdylib"]
